WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
67898
REGRESSION(
r94900
): fast/images/support-broken-image-delegate.html fails on Mac
https://bugs.webkit.org/show_bug.cgi?id=67898
Summary
REGRESSION(r94900): fast/images/support-broken-image-delegate.html fails on Mac
Ryosuke Niwa
Reported
2011-09-10 17:07:18 PDT
After
http://trac.webkit.org/changeset/94900
, fast/images/support-broken-image-delegate.html started failing on Leopard, Snow Leopard, & Lion:
http://build.webkit.org/results/SnowLeopard%20Intel%20Debug%20(Tests)/r94911%20(2096)/results.html
http://build.webkit.org/results/Leopard%20Intel%20Debug%20(Tests)/r94909%20(33500)/results.html
http://build.webkit.org/results/Lion%20Intel%20Debug%20(Tests)/r94910%20(535)/results.html
Attachments
Patch
(3.62 KB, patch)
2011-09-10 18:01 PDT
,
Beth Dakin
simon.fraser
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2011-09-10 17:16:58 PDT
Temporarily skipped the test in
http://trac.webkit.org/changeset/94915
.
Beth Dakin
Comment 2
2011-09-10 17:36:09 PDT
Thanks so much Ryosuke. I looked at this a bit, and I think I understand the problem. I changed RenderImage::imageSizeForError() so that instead of accessing CachedImage::image() and then measuring the size, it goes directly to CachedImage::brokenImage(). I think this test shows that that is wrong because in this case m_shouldPaintBrokenImage would be false and rather than returning the brokenImage, CachedImage::image() would have returned the null image. I think I have time to post a patch for this before I have to go.
Beth Dakin
Comment 3
2011-09-10 18:01:43 PDT
Created
attachment 106993
[details]
Patch Here's a patch to fix the test failure. Maybe check check for willPaintBrokenImage() should be inside brokenImage() itself…not sure…for the time being, I made it an independent function.
Ryosuke Niwa
Comment 4
2011-09-10 18:20:32 PDT
cc more people in the hope they can review this patch.
WebKit Review Bot
Comment 5
2011-09-11 14:07:20 PDT
Comment on
attachment 106993
[details]
Patch
Attachment 106993
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/9641169
New failing tests: svg/css/getComputedStyle-basic.xhtml svg/custom/svg-fonts-word-spacing.html media/video-zoom-controls.html
Simon Fraser (smfr)
Comment 6
2011-09-11 22:35:56 PDT
Comment on
attachment 106993
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=106993&action=review
> Source/WebCore/ChangeLog:6 > + REGRESSION(
r94900
): fast/images/support-broken-image-delegate.html fails on Mac > + > + No new tests. (OOPS!)
Some verbage here describing the change would be good.
Beth Dakin
Comment 7
2011-09-12 14:38:17 PDT
(In reply to
comment #6
)
> (From update of
attachment 106993
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=106993&action=review
> > > Source/WebCore/ChangeLog:6 > > + REGRESSION(
r94900
): fast/images/support-broken-image-delegate.html fails on Mac > > + > > + No new tests. (OOPS!) > > Some verbage here describing the change would be good.
Thanks, Simon! I will add some verbiage. I cannot reproduce those test failures that the Bot claims are failures. It would also be very surprising if this change caused failures in those tests anyway. I plan to commit the change and monitor the build bots.
Beth Dakin
Comment 8
2011-09-12 14:51:22 PDT
Committed change with revision 94980.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug